--- a/gameApi/src/main/resources/assets/index.html
+++ b/gameApi/src/main/resources/assets/index.html
@@ -27,9 +27,9 @@
   <script src='lib/swagger-oauth.js' type='text/javascript'></script>
 
   <!-- Some basic translations -->
-  <!-- <script src='lang/translator.js' type='text/javascript'></script> -->
-  <!-- <script src='lang/ru.js' type='text/javascript'></script> -->
-  <!-- <script src='lang/en.js' type='text/javascript'></script> -->
+  <!-- <script src='lang/translator.js' type='name/javascript'></script> -->
+  <!-- <script src='lang/ru.js' type='name/javascript'></script> -->
+  <!-- <script src='lang/en.js' type='name/javascript'></script> -->
 
   <script type="text/javascript">
     $(function () {
