--- a/gameApi/src/main/resources/assets/index.html
+++ b/gameApi/src/main/resources/assets/index.html
@@ -38,7 +38,7 @@
         url = decodeURIComponent(url[1]);
       } else {
         url = "http://petstore.swagger.io/v2/swagger.json";
-        url = "http://localhost:9000/app/api/swagger.json";
+        url = "http://localhost:9000/game/api/swagger.json";
       }
 
       hljs.configure({
